support for react/typescript/nextui/tailwind

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html class="h-full bg-white">
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
-
+    <title>Smugmug Backup</title>
   </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+  <body class="h-full">
+    <div id="root" />
     <script type="module" src="/src/renderer.ts"></script>
   </body>
 </html>
