--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html class="h-full bg-white">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Smugmug Backup</title>
-  </head>
-  <body class="h-full">
-    <div id="root" />
-    <script type="module" src="/src/renderer.ts"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Smugmug Backup</title>
+	</head>
+	<body>
+		<div id="root" />
+		<script type="module" src="/src/renderer.ts"></script>
+	</body>
 </html>
